<resources>
    <string name="app_name">App Esi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Tema">Modo Oscuro</string>

    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="BtnSesion">Iniciar Sesion</string>

    <string name="CerrarSesion">Cerrar sesion</string>
    <string name="CrearMuestra">Crear\nmuestra</string>
    <string name="GuardarUbicacion">Guardar\nubicación</string>

    <string name="BotonUbicacion">Guardar ubicación actual</string>

    <string name="UbicacionTerreno">Ubicación del terreno</string>
    <string name="PAIS">Pais</string>
    <string name="ESTADO">Estado</string>
    <string name="MUNICIPIO">Municipio</string>
    <string name="MEXICO">México</string>
    <string name="CDMX">CDMX</string>
    <string name="BENITO">Benito Juarez</string>
    <string name="ElegirLote">Elegir lote</string>
    <string name="SeleccionarLote">Seleccionar muestra</string>
    <string name="InformacionTerreno">Información del terreno</string>
    <string name="Nombre">Nombre</string>
    <string name="N_Muestra">N° Muestra</string>
    <string name="Latitud">Latitud</string>
    <string name="Longitud">Longitud</string>
    <string name="Profundidad">Profundidad</string>
    <string name="BtnFoto">Tomar fotografia</string>
    <string name="BtnAnalizar">Analizar</string>

    <string name="Presencia">Presencia</string>
    <string name="Oxígeno">Identificación\nde oxígeno</string>
    <string name="Materia_orgánica">Identificación de \nmateria orgánica</string>
    <string name="Minerales">Identificación\nde minerales</string>
    <string name="Nitrógeno">Identificación\nde nitrógeno</string>
    <string name="Rompimiento">Identificación\nde rompimiento</string>
    <string name="Materia_Viva">Identificación de \nmateria Viva</string>
    <string name="Actividad_Biológica">Identificación de \nactividad biológica</string>
    <string name="Nitrógeno_Orgánico">Identificación de \n nitrógeno orgánico</string>

</resources>