<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainbackground"
    tools:context=".Actividades.E_Mostrar_Resultados">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/Croma_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars"/>
        </TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Presencia"
            android:textColor="@color/TextoTema"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"/>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/Oxigeno"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Oxígeno"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/Mat_Organica"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Materia_orgánica"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/Minerales"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Minerales"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/Nitrogeno"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Nitrógeno"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/Rompimiento"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Rompimiento"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/Mat_Viva"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Materia_Viva"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/Act_Biologica"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Actividad_Biológica"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/Nitro_Organico"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/a_fondo_gris"
                            android:text="@string/Nitrógeno_Orgánico"
                            android:gravity="center"
                            android:textColor="@color/Negro"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow>
                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/GRAFICA"
                            android:layout_width="0dp"
                            android:layout_height="300dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp" />
                    </TableRow>
                    <TableRow>
                        <lecho.lib.hellocharts.view.PieChartView
                            android:id="@+id/chart"
                            android:layout_width="0dp"
                            android:layout_height="300dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"/>
                    </TableRow>
                </TableLayout>
            </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>