<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/agc_login"
    tools:context=".Actividades.A_Iniciar_Sesion">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="135dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/esi_icon" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginVertical="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_texto"
            android:layout_marginBottom="3dp">
            <EditText
                android:id="@+id/Correo"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Correo"
                android:background="@null"
                android:drawableStart="@drawable/ic_correo"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_texto"
            android:layout_marginTop="2dp">
            <EditText
                android:id="@+id/Pass"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/Contraseña"
                android:drawableStart="@drawable/ic_contrasena"
                android:drawablePadding="15dp"
                android:autofillHints="" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/Entrar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#00986B">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:text="@string/BtnSesion"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>