<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainbackground"
    tools:context=".Actividades.B_Menu">
    <Switch
        android:id="@+id/Tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextoTema"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/fondo_texto"
        android:text="@string/Tema" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:orientation="vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="135dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/esi_icon"/>
        </TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Bienvenido"
            android:textAllCaps="false"
            android:textColor="@color/TextoTema"
            android:textSize="50sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/Nombre_Completo"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/TextoTema"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/CerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/CerrarSesion"
            android:textSize="16sp"
            android:textColor="@color/TextoTema"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/BotonMuestra"
                app:cardCornerRadius="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="155dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/muestra"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#000000"
                        android:gravity="left"
                        android:shadowRadius="5"
                        android:shadowDx="2"
                        android:shadowDy="5"
                        android:text="@string/CrearMuestra"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:elevation="15dp"
                        android:textColor="#ffff"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/BotonLocalizacion"
                app:cardCornerRadius="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="155dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/localizacion"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#ffffff"
                        android:gravity="start"
                        android:shadowRadius="5"
                        android:shadowDx="2"
                        android:shadowDy="5"
                        android:text="@string/GuardarUbicacion"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:elevation="15dp"
                        android:textColor="#000000"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>